temporal updates to "what I'm working on" section

--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
 							<br><br>
 							<h3w>Currently working on:</h3w> <br>
 							&#127793 Pursuing further studies at University of Toronto.<br>
-							&#127793 Attending Climate Change AI Summer School.<br>
-							<!-- &#127793 A freelance data science project in data mining and analysis from social media.<br> -->
-							&#127793 Duolingo! Always improving my French with a 365< day streak!<br>
+							&#127793 Attending <a href="https://www.climatechange.ai/events/summer_school2024"> Climate Change AI Summer School </a>at the Mila Institute.<br>
+							&#127793 Duolingo! Always improving my French with a 400< day streak!<br>
 							&#127793 DataCamp! Strengthening and applying my skills in R and Python!<br><br>
 						</pw>
 					</div>
