Addition of CCAI summer school and tool

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 						<div class="inner">
 							<h2w class="major">Projects Highlight Reel</h2w> <br>
 							<pw>Page still under construction</pw> 
-							<pw style="font-size: x-small"> -May 29, 2024</pw>
+							<pw style="font-size: x-small"> -August 19, 2024</pw>
 						</div>
 					</section>
 			</div>
@@ -53,6 +53,11 @@
 							</thead>
 							<tbody>
 								<tr>
+									<td><a href="#ccaisummerschool">Climate Change Artificial Intelligence Summer School at the Mila Institute</a></td>
+									<td><a href="#ccaisummerschool">A week of intensive lectures and workshops and the rapid development of a Climate Vulnerability Index Tool</a></td>
+									<td>AI, Climate, Environment</td>
+								</tr>
+								<tr>
 									<td><a href="#undergradthesis">Undergraduate Honours Thesis</a></td>
 									<td><a href="#undergradthesis">Transnational Solidarity: a Methodological Assessment of Sentiment Analysis in Digital Geography</a></td>
 									<td>Academic, AI, Research</td>
@@ -62,11 +67,7 @@
 									<td><a href="#courses">Small list of courses taken at University of Waterloo for my Bachelors in Geography</a></td>
 									<td>Academic, Climate, Environment, Governance</td>
 								</tr>
-								<tr>
-									<td>More coming!</td>
-									<td>Next exciting project is underway will be completed and written up by the end of August 2024!</td>
-									<td>AI, Climate, Environment</td>
-								</tr>
+								
 							</tbody>
 							<tfoot>
 								<tr>
@@ -79,6 +80,48 @@
 			</div>
 		</section>
 		<!----------------------------- ACTUAL PROJECT WRAPPERS ------------------------------->
+		<!--CCAI SUMMER SCHOOL WRAPPER-->
+		<section id="ccaisummerschool" class="wrapper style3 fade-up">
+			<div class="inner">
+				<section>
+					<h2w>Climate Change AI Summer School</h2w> <br> <br>
+					<pw>
+						Conducted and organised by <a href="https://www.climatechange.ai/">Climate Change AI</a> and hosted by the 
+						<a href="https://mila.quebec/en">Mila Institute</a>, I was invited to join their selective 
+						<a href="https://www.climatechange.ai/events/summer_school2024#in-person-summer-school">CCAI summer school</a> 
+						in August 2024. <br>
+						Throughout this inspiring week, I got to attend insightful lectures on climate and sustainability, 
+						responsible AI, and effective communication. This week's largest feature was the collaborative teams to 
+						develop a project on the intersection of climate change and AI. Read below to see more details!
+					</pw><br><br>
+					<div class="inner">
+						<h3w>Climate Vulnerability Communication Tool</h3w>	<br><br>
+						<pw>
+							First credits are due to my incredible teammates: 
+							<a href="https://www.linkedin.com/in/flavionakasato/">Flávio Nakasato Cação</a> and 
+							<a href="https://www.linkedin.com/in/donna-marie-mlyneck-512b5b134/">Donna Marie Mlyneck</a>, and our amazing mentor, 
+							<a href="https://www.linkedin.com/in/ruth-schmidt/">Ruth Schmidt</a>. 
+							<br>
+								While climate, environmental, and socioeconomic data continue to develop in both scale and resolution, 
+							particularily with the help of AI methods, we still see a major communication gap between the scientists
+							and decision makers. There is a level of technical understanding necessary to decipher and understand the 
+							outputs that are continuously being made. 
+							<br>
+							We decided to use this week as an interdisciplinary team to develop the basic prototype of a climate 
+							vulnerability communication tool- built for decision makers with limited access to localised data to 
+							pinpoint policy and research pathways to adapt to climate change.
+							<br><br>
+						</pw>
+						<h3w><a href="https://ccai-vulnerability-index.streamlit.app/">See the tool in action!</a> </h3w><br>
+						<pw>
+							Disclaimer: this prototype is not considered a working model, but a demonstration of the potentials of leveraging
+							big data for climate adaptation- as a foundation for dynamic data, buildable in multiple dimensions. <br><br> 
+							Details on development can be found on our <a href="https://github.com/nakasato/ccai-vulnerability-index">Github repo</a>.
+						</pw>
+					</div>
+				</section>
+			</div>
+		</section>
 		<!--THESIS WRAPPER-->
 		<section id="undergradthesis" class="wrapper style1 fade-up">
 			<div class="inner">
@@ -87,7 +130,8 @@
 					<i style="color:#ffffff;">Title:</i>
 					<h3w>Transnational Solidarity: a Methodological Assessment of Sentiment Analysis in Digital Geography</h3w> <br>
 					<i style="color: #ffffff;">Abstract:</i> <br>
-					<pw>This thesis examines the applications of sentiment analysis to the notion of transnational solidarity through 
+					<pw>
+						This thesis examines the applications of sentiment analysis to the notion of transnational solidarity through 
 						"Instagram Infographic Activism" comment sections. The prevalence of bite-sized social justice infographics on 
 						Instagram has led to an onslaught of criticism from academic and journalistic worlds for performativity in their 
 						activism. With a fuzzy framework of identifying the presence of performativity in digital activism, I utilise 
@@ -108,8 +152,8 @@
 		<section id="courses" class="wrapper style3 fade-up">
 			<div class="inner">
 				<section>
-					<h2w>Courses at University of Waterloo   </h2w>
-					<h3w>   Just the highlights- my favourite courses, divided by theme.</h3w> <br> <br>
+					<h2w>Courses at University of Waterloo</h2w><br>
+					<h3w>Just the highlights- my favourite courses, divided by theme.</h3w> <br> <br>
 					<div class="row">
 						<h3w>Political and economic geography</h3w> <br>
 						<ul style="color: #ffffff;">
@@ -117,7 +161,8 @@
 							<li>GEOG 426: Geographies of Development</li>
 							<li>GEOG 411: The Digital Economy</li>
 							<li>GEOG 302: Geographies of Work and Employment</li>
-							<li>GEOG 336: Space, Power, and Politics: Citizenship in a Changing World</li>								<li>GEOG 325: Geographies of Health</li>
+							<li>GEOG 336: Space, Power, and Politics: Citizenship in a Changing World</li>
+							<li>GEOG 325: Geographies of Health</li>
 						</ul>
 						<h3w>Environmental science and management</h3w> <br>
 						<ul style="color: #ffffff;">
@@ -135,7 +180,11 @@
 								<li>GEOG 307: Societal Adaptation to Climate Change</li>
 								<li>INDG 301: Critical Theories of Indigeneity in a Global Perspective</li>
 							</ul>
-							<pw>These were all taken towards my Bachelor of Environmental Studies in Geography and Environmental Management with a specialisation in "Society and Economics". Graduated in June 2023.</pw>
+							<pw>
+								These were all taken towards my Bachelor of Environmental Studies in Geography and 
+								Environmental Management with a specialisation in "Society and Economics". Graduated 
+								in June 2023.
+							</pw>
 					</div>
 				</section>
 			</div>
