--- a/index.html
+++ b/index.html
@@ -65,31 +65,28 @@
 										<img src="images/hermitage_pic.jpeg" style="float:right;max-width:30%" />
 										<img src="images/rivertay_pic.jpg" style="float:right;max-width:30%" />
 										-->
-							Currently studying at University of Toronto for a post-grad diploma in climate response,
-							I hold a bachelors in geography from University of Waterloo, and I’m an incoming MSc geography
-							student at Concordia University. <br><br>
+							Currently an MSc Geography, Urban, and Environmental Studies at Concordia University in 
+							the brand-new Carbon Governance Living Lab.
+							I hold a bachelors in geography from University of Waterloo, and two post-grad diplomas from 
+							the University of Toronto; one in data analytics, and one in climate change policy and practice. 
+							<br><br>
 							My main research focusses are in climate and environmental science & governance,
-							with approaches in data, and intersectional applications mindful of social inequities. <br>
+							with approaches in data, and intersectional applications mindful of social inequities. 
+							<br>
 							Having grown up on a farm in deep rural Ontario, my passion for environmental
 							governance has a special root in the rural / urban divide, Indigenous sovereignty, and
-							community action. <br> <br>
+							community action. 
+							<br> <br>
 							On my spare time- I'm a major bookworm and hiker. I enjoy getting involved in local activism
-							campaigns
-							and mutual aid projects, and I can often be found with a latte and sweet pastry in hand :)
+							campaigns and mutual aid projects, and I can often be found with a latte and sweet pastry in hand :)
 							<br><br>
 							<h3w>Currently working on:</h3w> <br>
-							&#127793 Pursuing further studies at University of Toronto.<br>
+							&#127793 Pursuing my research-based masters degree at Concordia University<br>
 							&#127793 Attending <a href="https://www.climatechange.ai/events/summer_school2024"> Climate Change AI Summer School </a>at the Mila Institute.<br>
 							&#127793 Duolingo! Always improving my French with a 400< day streak!<br>
 							&#127793 DataCamp! Strengthening and applying my skills in R and Python!<br><br>
 						</pw>
 					</div>
-					<!--
-								<div class="col-6 col-12-medium">
-									<img src="images/hermitage_pic.jpeg" style="float:left;max-width:30%;">
-									<img src="images/rivertay_pic.jpg" style="float:left;max-width:30%;">
-								</div>
-								-->
 				</div>
 			</section>
 		</section>
@@ -152,7 +149,8 @@
 				<div class="content">
 					<div class="inner">
 						<h2>Work and Academic Background</h2><br>
-						<h2 style="font-size:x-large"> Current: Certificate of Climate Change Policy and Practice</h2>						<h3>University of Toronto</h3>
+						<h2 style="font-size:x-large"> Current: Certificate of Climate Change Policy and Practice</h2>						
+						<h3>University of Toronto</h3>
 						<details>
 							<summary>
 								Learn more
