another spelling error

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<img src="images/hermitage_pic.jpeg" style="float:right;max-width:30%" />
 										<img src="images/rivertay_pic.jpg" style="float:right;max-width:30%" />
 										-->
-							Currently an MSc candidate in Geography, Urban, and Environmental Studies at Concordia University, 
+							MSc candidate in Geography, Urban, and Environmental Studies at Concordia University, 
 							in the brand-new Carbon Governance Living Lab.
 							I hold a bachelors in geography from University of Waterloo, and two post-grad diplomas from 
 							the University of Toronto; one in data analytics, and one in climate change policy and practice. 
