notion workshop addition

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1w>Hi, I'm Isabel! &#127803;</h1w>
-				<h2w> <br>Environment nerd and serial student.</h2w>
+				<h2w> <br>MSc student and climate nerd.</h2w>
 				<ul class="actions">
 					<li><br><a href="#one" class="button scrolly" style="font-size: 0.8em;">About me</a></li>
 				</ul>
@@ -50,19 +50,11 @@
 		</section>
 		<!--One-->
 		<section id="one" class="wrapper style1 spotlights">
-			<!-- <img src="images/hermitage_pic.jpeg" style="float:right;max-width:30%;">
-						<img src="images/rivertay_pic.jpg" style="float:right;max-width:30%;"> -->
 			<section>
-				<!-- <img src="images/hermitage_pic.jpeg" style="float:right;max-inline-size: 10%;">
-							<img src="images/rivertay_pic.jpg" style="float:right;max-inline-size: 10%;"> -->
 				<div class="content">
 					<div class="inner">
 						<h2w>About me:</h2w> <br><br>
 						<pw>
-							<!-- 
-										<img src="images/hermitage_pic.jpeg" style="float:right;max-width:30%" />
-										<img src="images/rivertay_pic.jpg" style="float:right;max-width:30%" />
-										-->
 							MSc candidate in Geography, Urban, and Environmental Studies at Concordia University, 
 							in the brand-new Carbon Governance Living Lab.
 							I hold a bachelors in geography from University of Waterloo, and two post-grad diplomas from 
@@ -79,10 +71,9 @@
 							campaigns and mutual aid projects, and I can often be found with a latte and sweet pastry in hand :)
 							<br><br>
 							<h3w>Currently working on:</h3w> <br>
-							&#127793 Pursuing my research-based masters degree at Concordia University<br>
-							&#127793 Attending <a href="https://www.climatechange.ai/events/summer_school2024"> Climate Change AI Summer School </a>at the Mila Institute.<br>
-							&#127793 Duolingo! Always improving my French with a 400< day streak!<br>
-							&#127793 DataCamp! Strengthening and applying my skills in R and Python!<br><br>
+							&#127793 Pursuing my research-based masters degree at Concordia University.<br>
+							&#127793 Furthering development of the <a href="https://climate-vulnerability-compass.streamlit.app/">Climate Vulnerability Compass</a>. <br>
+							&#127793 Duolingo! Always improving my French with a 450< day streak!<br>
 						</pw>
 					</div>
 				</div>
@@ -147,17 +138,14 @@
 				<div class="content">
 					<div class="inner">
 						<h2>Work and Academic Background</h2><br>
-						<h2 style="font-size:x-large"> Current: Certificate of Climate Change Policy and Practice</h2>						
+						<h2 style="font-size:x-large">Certificate of Climate Change Policy and Practice</h2>						
 						<h3>University of Toronto</h3>
 						<details>
 							<summary>
 								Learn more
 							</summary>
 							<p>
-								As a fully online certificate program, this is a perfect pathway for me to grow my
-								skills in climate, translate my skills into the workforce, as well as maintain my
-								flexibility in my gap year, where I can relocate and take on new projects.
-								Courses include: <br>
+								Courses included: <br>
 								- Climate Policy and Corporate Responses <br>
 								- Sustainability Reporting <br>
 								- Greenhouse Gas Accounting and Reporting <br>
@@ -225,7 +213,8 @@
 								management, political geography,
 								and economic geography. <br>
 								Through my electives, I focussed on international development, Indigenous issues,
-								philosophy, and english rhetoric.
+								philosophy, and english rhetoric. <br>
+								See 
 							</p>
 						</details>
 						<p></p>
