Bug fix re notion resources addition. Also updated info on cv

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<li><a href="#two">Skills and Projects</a></li>
 					<li><a href="#three">Background</a></li>
 					<li><a href="#four">Get in touch!</a></li>
+					<li><a href="https://magnetic-candle.notion.site/Notion-workshop-a85ccec629994594b9c4cbec4b642237">Notion resources</a></li>
 					<!-- <li><a href="generic.html"></a></li> -->
 				</ul>
 			</nav>
@@ -90,7 +91,8 @@
 						<span class="icon solid major fa-thermometer-full"></span>
 						<h3w>Climate Change Policy and Adaptation</h3w>
 						<ul style="color:#ffffff">
-							<li>Currently enrolled in a Climate Policy and Practice certificate program at University of
+							<li>Currently studying my MSc in Geography, Urban, and Environmental Studies, researching and developing a carbon governance living lab.</li>
+							<li>Hold a post-graduate diploma in Climate Policy and Practice at University of
 								Toronto.</li>
 							<li>Honours Bachelors in Geography and Environmental Management from University of Waterloo.
 								With a specialisation in economics.</li>
@@ -113,17 +115,15 @@
 							<li>Certificate in Business Analytics from University of Toronto's Rotman School of
 								Management.</li>
 							<li>Several research assistantships both in and outside of academia. </li>
-							<li>An honours research thesis with over 90,000 data points of mined data.</li>
+							<li>Quantitative research background, particularily in data scraping and mining using python.</li>
 						</ul>
 					</section>
 					<section>
 						<span class="icon solid major fa-comments"></span>
-						<h3w>French language (level B1/B2)</h3w>
+						<h3w>Project highlights</h3w>
 						<ul style="color:#ffffff">
-							<li>Currently enrolled in French language courses on weekends.</li>
-							<li>Based in the bilingual city of Montréal as of May 2024.</li>
-							<li>Studied abroad for 3 months in France as a teen; living, working, and attending school
-								in French.</li>
+							<li>Climate Vulnerability Tool developed with Climate Change AI and the Mila Institute</li>
+							<li>Undergraduate thesis: Sentiment analysis, NLP, social media rhetoric, global activism. All my favourite things wrapped up in one.</li>
 						</ul>
 					</section>
 				</div>
@@ -138,7 +138,29 @@
 				<div class="content">
 					<div class="inner">
 						<h2>Work and Academic Background</h2><br>
-						<h2 style="font-size:x-large">Certificate of Climate Change Policy and Practice</h2>						
+						<h2 style="font-size:x-large">Current: Master of Science</h2>						
+						<h3>Concordia University</h3>
+						<details>
+							<summary>
+								Learn more
+							</summary>
+							<p>
+								Master of Science: Geography, Urban, and Environmental Studes. <br>
+								Two year masters research program, September 2024 - April 2026 <br>
+								Our project is titled: <i>Towards a Carbon Governance Living Lab: Designing and 
+								Testing Local Decarbonization Experiments. </i><br>
+								Split advisory between Concordia University's Department of Geography, Urban, and Environmental Studies and the Department of 
+								Business Management, I get a cross-faculty, interdisciplinary research experience to look at new and experimental governance 
+								structures to work towards decarbonization. <br> 
+								My research will be taking a particular interest to the governance mechanisms of 
+								multi-stakeholder partnerships, the incorporation of user feedback, and the overarching process to foster innovative and 
+								societal change to build decarbonized cities. <br><br>
+								Also a teaching assistant to a 3rd year undergraduate course on the economic development of urban regions.
+							</p>
+						</details>
+						<br><br><br>
+						<h2 style="font-size:x-large"> Past </h2>
+						<h2 style="font-size:large">Certificate of Climate Change Policy and Practice</h2>						
 						<h3>University of Toronto</h3>
 						<details>
 							<summary>
@@ -151,11 +173,10 @@
 								- Greenhouse Gas Accounting and Reporting <br>
 								- Greenhouse Gas Validation and Verification <br>
 								- French! This one is just for fun! <br>
-								I'm on track to finish this certificate in time for September 2024.
 							</p>
 						</details>
 						<br><br><br>
-						<h2 style="font-size:x-large">Bookseller</h2>
+						<h2 style="font-size:large">Bookseller</h2>
 						<h3>Words Worth Books</h3>
 						<details>
 							<summary>
@@ -173,7 +194,7 @@
 							</p>
 						</details>
 						<br><br><br>
-						<h2 style="font-size:x-large">Certificate of Business Data Analytics</h2>
+						<h2 style="font-size:large">Certificate of Business Data Analytics</h2>
 						<h3>University of Toronto, Rotman School of Management</h3>
 						<details>
 							<summary>
@@ -194,7 +215,7 @@
 							</p>
 						</details>
 						<br><br><br>
-						<h2 style="font-size:x-large">Honours Bachelors of Environmental Studies</h2>
+						<h2 style="font-size:large">Honours Bachelors of Environmental Studies</h2>
 						<h3>University of Waterloo</h3>
 						<h4>Geography and Environmental Management</h4>
 						<details>
@@ -242,7 +263,7 @@
 							</p>
 						</details>
 						<br><br><br>
-						<h2 style="font-size:x-large">Hydrologic Biogeochemistry Modelling Research Assistant</h2>
+						<h2 style="font-size:large">Hydrologic Biogeochemistry Modelling Research Assistant</h2>
 						<h3>University of Waterloo, Faculty of Engineering</h3>
 						<details>
 							<summary>
@@ -262,7 +283,7 @@
 							</p>
 						</details>
 						<br><br><br>
-						<h2 style="font-size:x-large">Environment Peer Leader</h2>
+						<h2 style="font-size:large">Environment Peer Leader</h2>
 						<h3>United College (<i>formally St. Paul's University College</i>), University of Waterloo</h3>
 						<details>
 							<summary>
@@ -276,7 +297,7 @@
 							</p>
 						</details>
 						<br><br><br>
-						<h2 style="font-size:x-large">Research Assistant and Camp Counsellor</h2>
+						<h2 style="font-size:large">Research Assistant and Camp Counsellor</h2>
 						<h3>White Owl Native Ancestry Association</h3>
 						<details>
 							<summary>
