--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 						<div class="inner">
 							<h2w class="major">Projects Highlight Reel</h2w> <br>
 							<pw>Page still under construction</pw> 
-							<pw style="font-size: x-small"> -August 19, 2024</pw>
+							<pw style="font-size: small"> -Sept 12, 2024</pw>
 						</div>
 					</section>
 			</div>
