--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 						<h2w>About me:</h2w> <br><br>
 						<pw>
 							MSc candidate in Geography, Urban, and Environmental Studies at Concordia University, 
-							in the brand-new Carbon Governance Living Lab.
+							in the brand-new Carbon Governance Living Lab. 
+							<br>
 							I hold a bachelors in geography from University of Waterloo, and two post-grad diplomas from 
 							the University of Toronto; one in data analytics, and one in climate change policy and practice. 
 							<br><br>
@@ -73,8 +74,7 @@
 							<br><br>
 							<h3w>Currently working on:</h3w> <br>
 							&#127793 Pursuing my research-based masters degree at Concordia University.<br>
-							&#127793 Furthering development of the <a href="https://climate-vulnerability-compass.streamlit.app/">Climate Vulnerability Compass</a>. <br>
-							&#127793 Duolingo! Always improving my French with a 450< day streak!<br>
+							&#127793 Furthering development and outreach of the <a href="https://climate-vulnerability-compass.streamlit.app/">Climate Vulnerability Compass</a>. <br>
 						</pw>
 					</div>
 				</div>
@@ -91,8 +91,9 @@
 						<span class="icon solid major fa-thermometer-full"></span>
 						<h3w>Climate Change Policy and Adaptation</h3w>
 						<ul style="color:#ffffff">
-							<li>Currently studying my MSc in Geography, Urban, and Environmental Studies, researching and developing a carbon governance living lab.</li>
-							<li>Hold a post-graduate diploma in Climate Policy and Practice at University of
+							<li>Currently studying my MSc in Geography, Urban, and Environmental Studies, researching and 
+								designing a carbon governance living lab.</li>
+							<li>Post-graduate diploma in Climate Policy and Practice at University of
 								Toronto.</li>
 							<li>Honours Bachelors in Geography and Environmental Management from University of Waterloo.
 								With a specialisation in economics.</li>
@@ -152,10 +153,10 @@
 								Split advisory between Concordia University's Department of Geography, Urban, and Environmental Studies and the Department of 
 								Business Management, I get a cross-faculty, interdisciplinary research experience to look at new and experimental governance 
 								structures to work towards decarbonization. <br> 
-								My research will be taking a particular interest to the governance mechanisms of 
+								My research is taking a particular interest to the governaning mechanisms of labs for socioecological transitions: <br>
 								multi-stakeholder partnerships, the incorporation of user feedback, and the overarching process to foster innovative and 
 								societal change to build decarbonized cities. <br><br>
-								Also a teaching assistant to a 3rd year undergraduate course on the economic development of urban regions.
+								Teaching assistant to a 3rd year undergraduate course on the economic development of urban regions.
 							</p>
 						</details>
 						<br><br><br>
@@ -284,7 +285,7 @@
 						</details>
 						<br><br><br>
 						<h2 style="font-size:large">Environment Peer Leader</h2>
-						<h3>United College (<i>formally St. Paul's University College</i>), University of Waterloo</h3>
+						<h3>United College (<i>formerly St. Paul's University College</i>), University of Waterloo</h3>
 						<details>
 							<summary>
 								Learn more
