one more spelling error fix

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							My main research focusses are in climate and environmental science & governance,
 							with approaches in data, and intersectional applications mindful of social inequities. 
 							<br>
-							Having grown up on a farm in deep rural Ontario, my passion for environmental
+							Having grown up on a farm in deep rural Ontario, my passion for socio-ecological
 							governance has a special root in the rural / urban divide, Indigenous sovereignty, and
 							community action. 
 							<br> <br>
