Adding student resources homepage. Both linked and refered to in headings.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<li><a href="#two">Skills and Projects</a></li>
 					<li><a href="#three">Background</a></li>
 					<li><a href="#four">Get in touch!</a></li>
-					<li><a href="https://magnetic-candle.notion.site/Notion-workshop-a85ccec629994594b9c4cbec4b642237">Notion resources</a></li>
+					<li><a href="https://isabeldrummond.notion.site/">Student resources</a></li>
 					<!-- <li><a href="generic.html"></a></li> -->
 				</ul>
 			</nav>
@@ -75,6 +75,7 @@
 							<h3w>Currently working on:</h3w> <br>
 							&#127793 Pursuing my research-based masters degree at Concordia University.<br>
 							&#127793 Furthering development and outreach of the <a href="https://climate-vulnerability-compass.streamlit.app/">Climate Vulnerability Compass</a>. <br>
+							&#127793 Tutoring and TAing in economics, urban development, and quantitative research methods. <br>
 						</pw>
 					</div>
 				</div>
