--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							I hold a bachelors in geography from University of Waterloo, and two post-grad diplomas from 
 							the University of Toronto; one in data analytics, and one in climate change policy and practice. 
 							<br><br>
-							My main research focusses are in climate and environmental science & governance,
+							My main research focusses are in climate and environmental governance,
 							with approaches in data, and intersectional applications mindful of social inequities. 
 							<br>
 							Having grown up on a farm in deep rural Ontario, my passion for socio-ecological
@@ -154,10 +154,10 @@
 								Split advisory between Concordia University's Department of Geography, Urban, and Environmental Studies and the Department of 
 								Business Management, I get a cross-faculty, interdisciplinary research experience to look at new and experimental governance 
 								structures to work towards decarbonization. <br> 
-								My research is taking a particular interest to the governaning mechanisms of labs for socioecological transitions: <br>
-								multi-stakeholder partnerships, the incorporation of user feedback, and the overarching process to foster innovative and 
+								My research is taking a particular interest to the governance mechanisms of labs for socioecological transitions;
+								multi-stakeholder partnerships, the incorporation of user feedback, and the processes to foster innovative and 
 								societal change to build decarbonized cities. <br><br>
-								Teaching assistant to a 3rd year undergraduate course on the economic development of urban regions.
+								Teaching assistant to a 3rd year undergraduate course on urban and regional economic development.
 							</p>
 						</details>
 						<br><br><br>
