--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,7 @@
 						<h3w><a href="https://ccai-vulnerability-index.streamlit.app/">See the tool in action!</a> </h3w><br>
 						<pw>
 							Disclaimer: this prototype is not considered a working model, but a demonstration of the potentials of leveraging
-							big data for climate adaptation- as a foundation for dynamic data, buildable in multiple dimensions. <br><br> 
+							big data for climate adaptation- as a foundation for dynamic data, scalable in multiple dimensions. <br><br> 
 							Details on development can be found on our <a href="https://github.com/nakasato/ccai-vulnerability-index">Github repo</a>.
 						</pw>
 					</div>
