broken link for streamlit. commented out for now.

--- a/projects.html
+++ b/projects.html
@@ -110,12 +110,16 @@
 							We decided to use this week as an interdisciplinary team to develop the basic prototype of a climate 
 							vulnerability communication tool- built for decision makers with limited access to localised data to 
 							pinpoint policy and research pathways to adapt to climate change.
-							<br><br>
+							<br>
 						</pw>
-						<h3w><a href="https://ccai-vulnerability-index.streamlit.app/">See the tool in action!</a> </h3w><br>
+						<!-- <h3w><a href="https://ccai-vulnerability-index.streamlit.app/">See the tool in action!</a> </h3w><br>
 						<pw>
 							Disclaimer: this prototype is not considered a working model, but a demonstration of the potentials of leveraging
-							big data for climate adaptation- as a foundation for dynamic data, scalable in multiple dimensions. <br><br> 
+							big data for climate adaptation- as a foundation for dynamic data, scalable in multiple dimensions. 
+						</pw> -->
+						<pw>
+							- Index and data sourced from <a href="https://gain.nd.edu/our-work/country-index/"> ND-GAIN.</a> <br>
+							- Model trained with <a href="https://www.ipcc.ch/reports/"> IPCC 6th Assessment Report. </a> <br>
 							Details on development can be found on our <a href="https://github.com/nakasato/ccai-vulnerability-index">Github repo</a>.
 						</pw>
 					</div>
