--- a/index.html
+++ b/index.html
@@ -56,15 +56,12 @@
 					<div class="inner">
 						<h2w>About me:</h2w> <br><br>
 						<pw>
-							MSc candidate in Geography, Urban, and Environmental Studies at Concordia University, 
+							MSc student in Geography, Urban & Environmental Studies at Concordia University, 
 							in the brand-new Carbon Governance Living Lab. 
 							<br>
 							I hold a bachelors in geography from University of Waterloo, and two post-grad diplomas from 
 							the University of Toronto; one in data analytics, and one in climate change policy and practice. 
-							<br><br>
-							My main research focusses are in climate and environmental governance,
-							with approaches in data, and intersectional applications mindful of social inequities. 
-							<br>
+							<br> <br>
 							Having grown up on a farm in deep rural Ontario, my passion for socio-ecological
 							governance has a special root in the rural / urban divide, Indigenous sovereignty, and
 							community action. 
@@ -74,8 +71,10 @@
 							<br><br>
 							<h3w>Currently working on:</h3w> <br>
 							&#127793 Pursuing my research-based masters degree at Concordia University.<br>
-							&#127793 Furthering development and outreach of the <a href="https://climate-vulnerability-compass.streamlit.app/">Climate Vulnerability Compass</a>. <br>
-							&#127793 Tutoring and TAing in economics, urban development, and quantitative research methods. <br>
+							&#127793 Teaching Assistant in the Department of Geography, Planning & Environment</a>. <br>
+							&#127793 Serving as Department Organizer for CREW-CSN. 
+							<pw style="font-size:x-small"> <a href="https://www.crewcsn.com/">HAVE YOU SIGNED YOUR UNION CARD THIS SEMESTER?</a></pw><br>
+							<pw>&#127793 Developing my French!<br>
 						</pw>
 					</div>
 				</div>
@@ -92,7 +91,7 @@
 						<span class="icon solid major fa-thermometer-full"></span>
 						<h3w>Climate Change Policy and Adaptation</h3w>
 						<ul style="color:#ffffff">
-							<li>Currently studying my MSc in Geography, Urban, and Environmental Studies, researching and 
+							<li>Currently studying my MSc in Geography, Urban & Environmental Studies, researching and 
 								designing a carbon governance living lab.</li>
 							<li>Post-graduate diploma in Climate Policy and Practice at University of
 								Toronto.</li>
@@ -147,17 +146,21 @@
 								Learn more
 							</summary>
 							<p>
-								Master of Science: Geography, Urban, and Environmental Studes. <br>
+								Master of Science: Geography, Urban, and Environmental Studies. <br>
 								Two year masters research program, September 2024 - April 2026 <br>
-								Our project is titled: <i>Towards a Carbon Governance Living Lab: Designing and 
-								Testing Local Decarbonization Experiments. </i><br>
-								Split advisory between Concordia University's Department of Geography, Urban, and Environmental Studies and the Department of 
+								Our project is titled: <i><a href="https://www.concordia.ca/research/volt-age/initiatives/towards-a-carbon-governance-living-lab.html">Towards a Carbon Governance Living Lab: Designing and Testing Local Decarbonization Experiments</a>. </i><br><br>
+								Split advisory between Concordia University's Department of Geography, Urban & Environmental Studies and the Department of 
 								Business Management, I get a cross-faculty, interdisciplinary research experience to look at new and experimental governance 
 								structures to work towards decarbonization. <br> 
-								My research is taking a particular interest to the governance mechanisms of labs for socioecological transitions;
-								multi-stakeholder partnerships, the incorporation of user feedback, and the processes to foster innovative and 
-								societal change to build decarbonized cities. <br><br>
-								Teaching assistant to a 3rd year undergraduate course on urban and regional economic development.
+								My research is taking a particular interest to carbon governance.
+								Firstly, developing the study of carbon governance- what does it mean? what does it entail?
+								Secondly, studying the governance mechanisms of living labs for socio-ecological transitions;
+								analysizing the overlap of practices and procedures between collaborative, climate, and experimental governance. <br><br>
+								Additionally:
+								<ul>
+									<li>Teaching Assistant in the Department of Geography, Urban & Environmental Studies (GPE).</li>
+									<li>GPE Department Organizer for CREW-CSN. <a href="https://www.crewcsn.com/" style="font-size:x-small">HAVE YOU SIGNED YOUR UNION CARD THIS SEMESTER?</a><br></li>
+								</ul>
 							</p>
 						</details>
 						<br><br><br>
@@ -191,8 +194,7 @@
 								With books specifically, I read, sold, reviewed, recommended, marketted, and editted
 								books.
 								I also helped run the Instagram, organised new marketting and display strategies, and
-								ran events-
-								such as author signings and meet-and-greets.
+								ran events- such as author signings and meet-and-greets.
 							</p>
 						</details>
 						<br><br><br>
