added bluesky link, added Bhattacharya et al. 2022 link, and fixed a typo

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 							<p>
 								Master of Science: Geography, Urban, and Environmental Studies. <br>
 								Two year masters research program, September 2024 - April 2026 <br>
-								Our project is titled: <i><a href="https://www.concordia.ca/research/volt-age/initiatives/towards-a-carbon-governance-living-lab.html">Towards a Carbon Governance Living Lab: Designing and Testing Local Decarbonization Experiments</a>. </i><br><br>
+								Our project is titled: <i><a href="https://www.concordia.ca/research/volt-age/initiatives/towards-a-carbon-governance-living-lab.html">Towards 
+								a Carbon Governance Living Lab: Designing and Testing Local Decarbonization Experiments</a>. </i><br><br>
 								Split advisory between Concordia University's Department of Geography, Urban & Environmental Studies and the Department of 
 								Business Management, I get a cross-faculty, interdisciplinary research experience to look at new and experimental governance 
 								structures to work towards decarbonization. <br> 
@@ -238,8 +239,7 @@
 								management, political geography,
 								and economic geography. <br>
 								Through my electives, I focussed on international development, Indigenous issues,
-								philosophy, and english rhetoric. <br>
-								See 
+								philosophy, and English rhetoric. <br>
 							</p>
 						</details>
 						<p></p>
@@ -284,6 +284,9 @@
 								Undergraduate Research Award for my work. Improved skills in Python, R, and statistics
 								for environmental data
 								modelling.
+								Recognized in acknowledgements in <a href="https://www.researchgate.net/publication/357946784_
+								Windows_into_the_past_Lake_sediment_phosphorus_trajectories_act_as_integrated_archives_of_watershed
+								_disturbance_legacies_over_centennial_scales"><u>Bhattacharya, et al. (2022)</u></a>.
 							</p>
 						</details>
 						<br><br><br>
@@ -345,7 +348,11 @@
 											class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
 									</li>
 									<li><a href="https://github.com/isabeldrummond" class="icon brands fa-github"><span
-												class="label">GitHub</span></a></li>
+												class="label">GitHub</span></a>
+									</li>
+									<li><a href="https://bsky.app/profile/idrummo.bsky.social" class="fa-brands fa-bluesky"><span
+										class="label">Bluesky</span></a>
+									</li>
 								</ul>
 							</li>
 						</ul>
