adding button to open summer2025.html

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1w>Hi, I'm Isabel! &#127803;</h1w>
-				<h2w> <br>MSc student and climate nerd.</h2w>
+				<h2w> <br>MSc student and climate nerd.</h2w> <br>
 				<ul class="actions">
 					<li><br><a href="#one" class="button scrolly" style="font-size: 0.8em;">About me</a></li>
+					<li><br><a href="summer2025.html" class="button scrolly" style="font-size: 0.8em;">Currently seeking Summer 2025 opportunities</a></li>
+
 				</ul>
 			</div>
 		</section>
