added bluesky link to footer and added wrapper ids for later work

--- a/projects.html
+++ b/projects.html
@@ -15,30 +15,28 @@
 			rel="icon" type="image/x-icon">
 	</head>
 	<body class="is-preload">
-
 		<!-- Header -->
-			<header id="header" style="color: #3C4931">
-				<a href="index.html" class="title">Isabel Drummond</a>
-				<nav>
-					<ul>
-						<li><a href="index.html">Back to homepage</a></li>
-					</ul>
-				</nav>
-			</header>
+		<header id="header" style="color: #3C4931">
+			<a href="index.html" class="title">Isabel Drummond</a>
+			<nav>
+				<ul>
+					<li><a href="index.html">Back to homepage</a></li>
+				</ul>
+			</nav>
+		</header>
 
 		<!-- Intro wrapper -->
-			<div id="introp">
-				<!-- Main -->
-					<section id="introp" class="wrapper">
-						<div class="inner">
-							<h2w class="major">Projects Highlight Reel</h2w> <br>
-							<pw>Page still under construction</pw> 
-							<pw style="font-size: small"> -Sept 12, 2024</pw>
-						</div>
-					</section>
-			</div>
+		<div id="intro">
+		<!-- Main -->
+			<section id="introp" class="wrapper">
+				<div class="inner">
+					<h2w class="major">Projects Highlight Reel</h2w> <br>
+					<pw style="font-size: small"> Last updated April 16, 2025</pw>						
+				</div>
+			</section>
+		</div>
 		<!---- PROJECT TABLE WRAPPER ----->
-		<section id="two" class="wrapper style2 fade-up">
+		<section id="two" class="wrapper style1 spotlights">
 			<div class="inner">
 				<section>
 					<h2>Table of contents</h2>
@@ -194,7 +192,7 @@
 			</div>
 		</section>
 		<!-- Footer -->
-		<section class="wrapper style1 fade-up">
+		<section id="four" class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2w>Get in touch !</h2w><br>
 				<div class="row">
@@ -219,7 +217,11 @@
 											class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
 									</li>
 									<li><a href="https://github.com/isabeldrummond" class="icon brands fa-github"><span
-												class="label">GitHub</span></a></li>
+												class="label">GitHub</span></a>
+									</li>
+									<li><a href="https://bsky.app/profile/idrummo.bsky.social" class="fa-brands fa-bluesky"><span
+										class="label">Bluesky</span></a>
+									</li>
 								</ul>
 							</li>
 						</ul>
