--- a/summer2025.html
+++ b/summer2025.html
@@ -21,44 +21,78 @@
 				<a href="index.html" class="title">Isabel Drummond</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Back to homepage</a></li>
+						<li><a href="index.html">See homepage</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Intro wrapper -->
-			<div id="introp">
+			<div id="intro">
 				<!-- Main -->
 					<section id="introp" class="wrapper">
 						<div class="inner">
 							<h2w class="major">Seeking Summer 2025 opportunities</h2w> <br>
-							<pw>Page still under construction</pw> 
-							<pw style="font-size: small"> -April 16, 2025</pw>
+							<pw style="font-size: small"> Last updated April 16, 2025</pw>						
 						</div>
 					</section>
-			</div>
-		
-		<!--COURSES WRAPPER-->
-		<section id="courses" class="wrapper style2 fade-up">
+			</div>			
+		<!--DETAILS WRAPPER-->
+		<section id="details" class="wrapper style2 fade-up">
 			<div class="inner">
 				<section>
 					<h3>Interests</h3><br>
-					<div class="row">
-							<p>
-								These were all taken towards my Bachelor of Environmental Studies in Geography and 
-								Environmental Management with a specialisation in "Society and Economics". Graduated 
-								in June 2023.
-							</p>
-					</div>
+                         <ul>
+                            I'm deeply interested in the collaborations between different sectors towards climate action.
+                            I am particularly interested in the role of ethics and data in these collaborations, and how it can be used to inform decision-making and drive action. <br>
+                            My masters research is focussed on cross-sector collaborations in climate governance, largely in living labs, and I am looking to apply this knowledge in a practical setting. <br>
+                            </ul>
+							<ul>
+								Potential job titles include:	ESG analyst, policy analyst, data analyst, research assistant
+							</ul>
+					<ul class="actions fit">
+						<li>
+							<ul>
+								Climate
+								<li>Climate change mitigation and adaptation</li>
+								<li>Climate change policy</li>
+                                <li>Climate governance</li>
+								<li>Climate justice</li>
+                                <li>Climate politics</li>
+							</ul>
+						</li>
+						<li>
+							<ul>
+								Governance
+								<li>Living Labs</li>
+								<li>Collaborative governance</li>
+								<li>ESG and corporate governance</li>
+                                <li>Cross-sector collaborations</li>
+								<li>Community based research</li>
+								<li>Participatory research</li>
+								<li>Public policy</li>
+							</ul>
+						</li>
+						<li>
+							<ul>
+								Data
+								<li>Data ethics</li>
+								<li>Data governance</li>
+								<li>Data analysis</li>
+								<li>Data visualization</li>
+								<li>Data science</li>
+								<li>Data management</li>
+							</ul>
+						</li>
+					</ul>
+					
 				</section>
                 <section>
 					<h3>Timeline</h3><br>
 					<div class="row">
 							<p>
 								Available for internships or co-op placements from late May 2025 to late August 2025. <br>
-                                Variation in this schedule can be discussed if needed- more flexibility into the Autumn months. <br>
+                                Variation in this schedule can be discussed if needed- with more flexibility into the Autumn months. <br>
                                 I am looking for a full-time position, but I am open to part-time opportunities as well. <br>
-
 							</p>
 					</div>
 				</section>
@@ -93,10 +127,15 @@
                         </li>
                     </ul>
                 </section>
+				<ul class="actions fit">
+					<li> <a href="/assets/pdf/IsabelDrummond_CV.pdf" class="button primary icon solid fa-download" style="background-color: #3C4931; color: #ffffff; font-size: 0.7em;" download="IsabelDrummond_CV">Download my CV</a></li>
+					<li><a href="index.html" class="button primary fit" style="background-color: #3C4931; color: #ffffff; font-size: 0.7em;">Back to homepage</a></li>
+				</ul>
 			</div>
-		</section>
+        </section>
+
 		<!-- Footer -->
-		<section class="wrapper style1 fade-up">
+		<section id="four" class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2w>Get in touch !</h2w><br>
 				<div class="row">
@@ -121,7 +160,11 @@
 											class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
 									</li>
 									<li><a href="https://github.com/isabeldrummond" class="icon brands fa-github"><span
-												class="label">GitHub</span></a></li>
+												class="label">GitHub</span></a>
+									</li>
+									<li><a href="https://bsky.app/profile/idrummo.bsky.social" class="fa-brands fa-bluesky"><span
+										class="label">Bluesky</span></a>
+									</li>
 								</ul>
 							</li>
 						</ul>
