modified table of contents text to white I think I accidentally turned it black after changing main.css

--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,8 @@
 		<section id="two" class="wrapper style1 spotlights">
 			<div class="inner">
 				<section>
-					<h2>Table of contents</h2>
-					<div class="table-wrapper">
+					<h2w>Table of contents</h2w>
+					<div class="table-wrapper" style="color:#ffffff;">
 						<table>
 							<thead>
 								<tr>
