--- a/summer2025.html
+++ b/summer2025.html
@@ -32,7 +32,7 @@
 					<section id="introp" class="wrapper">
 						<div class="inner">
 							<h2w class="major">Seeking Summer 2025 opportunities</h2w> <br>
-							<pw style="font-size: small"> Last updated April 16, 2025</pw>						
+							<pw style="font-size: small"> Last updated April 27, 2025</pw>						
 						</div>
 					</section>
 			</div>			
@@ -128,7 +128,7 @@
                     </ul>
                 </section>
 				<ul class="actions fit">
-					<li> <a href="/assets/pdf/IsabelDrummond_CV.pdf" class="button primary icon solid fa-download" style="background-color: #3C4931; color: #ffffff; font-size: 0.7em;" download="IsabelDrummond_CV">Download my CV</a></li>
+					<li> <a href="/assets/pdf/DRUMMOND.resume.pdf" class="button primary icon solid fa-download" style="background-color: #3C4931; color: #ffffff; font-size: 0.7em;" download="IsabelDrummond_CV">Download my CV</a></li>
 					<li><a href="index.html" class="button primary fit" style="background-color: #3C4931; color: #ffffff; font-size: 0.7em;">Back to homepage</a></li>
 				</ul>
 			</div>
